Statusbar and basic monitor output

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"signalRToken":"30NlDopRyMT6PQvABqJz"}
+{"signalRToken":"30NlDopRyMT6PQvABqJz","selectedDirectory":"C:\\Dev\\wows-monitor\\app\\directory-testing\\non-steam"}
