--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.18",
     "@fortawesome/free-brands-svg-icons": "5.8.2",
     "@fortawesome/free-solid-svg-icons": "5.8.2",
+    "@fortawesome/free-regular-svg-icons": "5.8.2",
     "@ngx-meta/core": "7.0.0",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
