Styling for the monitor part, pipes, more testing

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"signalRToken":"30NlDopRyMT6PQvABqJz","selectedDirectory":"C:\\Dev\\wows-monitor\\app\\directory-testing\\non-steam"}
+{"signalRToken":"30NlDopRyMT6PQvABqJz","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\steam-exe_path"}
