--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@wows-monitor/app",
+  "description": "WoWs Monitor",
   "version": "1.0.0",
   "homepage": "https://wows-monitor.com",
   "author": {
@@ -65,8 +66,8 @@
     "@fortawesome/angular-fontawesome": "0.4.0",
     "@fortawesome/fontawesome-svg-core": "1.2.18",
     "@fortawesome/free-brands-svg-icons": "5.8.2",
-    "@fortawesome/free-solid-svg-icons": "5.8.2",
     "@fortawesome/free-regular-svg-icons": "5.8.2",
+    "@fortawesome/free-solid-svg-icons": "5.8.2",
     "@ngx-meta/core": "7.0.0",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
@@ -89,6 +90,7 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
     "npm-run-all": "4.1.5",
+    "path": "^0.12.7",
     "primeicons": "1.0.0",
     "primeng": "7.1.3",
     "protractor": "5.4.2",
