Settings, UpdateService added functions and a bit of cleanup

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"signalRToken":"30NlDopRyMT6PQvABqJz","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\steam-exe_path"}
+{"autoUpdate":true,"playerBackgrounds":true,"fontsize":"big"}
