--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
               "node_modules/skeleton-css/css/normalize.css",
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "src/styles/theme.css",
+              "src/styles/theme.scss",
               "src/styles.scss"
             ],
             "scripts": []
