Added translations, fixed styles, fixed some build bugs

--- a/angular.json
+++ b/angular.json
@@ -92,7 +92,8 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.browser.ts"
                 }
-              ]
+              ],
+              "serviceWorker": true
             },
             "production": {
               "fileReplacements": [
