--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "start:desktop": "npm run postinstall:web && ng run app:serve-desktop",
     "start:desktop:electron": "npm run postinstall:electron && ng run app:serve-desktop",
     "start:browser": "npm run postinstall:web && ng run app:serve-browser",
-    "build": "npm run build:browser",
-    "build:prod": "npm run build:browser:prod",
     "build:desktop": "ng run app:build-desktop:dev",
     "build:browser": "npm run postinstall:web && ng run app:build-browser:dev",
     "build:desktop:prod": "ng run app:build-desktop:production",
@@ -32,7 +30,7 @@
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run preelectron && electron . --serve",
     "electron:local": "npm run preelectron && electron . --local",
     "electron:linux": "npm run preelectron && electron-builder build --linux",
-    "electron:windows": "npm run preelectron && electron-builder publish --windows",
+    "electron:windows": "npm run preelectron && npm run build:desktop:prod && electron-builder publish --windows",
     "electron:mac": "npm run preelectron && electron-builder build --mac --publish",
     "bump": "node tooling/bump-version.js",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
