--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"autoUpdate":true,"playerBackgrounds":true,"fontsize":"big"}
+{"autoUpdate":true,"selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
