Fixed some service issues, Fixed config timing, fixed build

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"autoUpdate":true,"selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
+{"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam"}
