--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run preelectron && electron . --serve",
     "electron:local": "npm run preelectron && electron . --local",
     "electron:linux": "npm run preelectron && electron-builder build --linux",
-    "electron:windows": "npm run preelectron && npm run build:desktop:prod && electron-builder publish --windows",
+    "electron:windows": "npm run build:desktop:prod && npm run electron:windows:e",
+    "electron:windows:e": "npm run preelectron && electron-builder publish --windows",
     "electron:mac": "npm run preelectron && electron-builder build --mac --publish",
     "bump": "node tooling/bump-version.js",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
