--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam"}
+{"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
