Changed preference.xml parsing to regex to avoid weird wg xml structure

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
+{"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"C:\\Dev\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
