Fixed Steam folder detection, added error output

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"C:\\Dev\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
+{"autoUpdate":false,"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"C:\\Users\\bhe\\Desktop\\steam-exe_path","playerBackgrounds":true,"fontsize":"normal"}
