UI for bots, hidden profiles and no battles

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"autoUpdate":true,"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\steam-exe_path","playerBackgrounds":true,"fontsize":"normal"}
+{"autoUpdate":true,"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"C:\\Users\\bhe\\Desktop\\angulars\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
