Added option to manually add replays folder

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"autoUpdate":true,"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"C:\\Users\\bhe\\Desktop\\angulars\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
+{"autoUpdate":false,"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"C:\\Users\\bhe\\Desktop\\angulars\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal","overwriteReplaysDirectory":"C:\\Users\\bhe\\Desktop\\angulars\\app\\directory-testing\\non-steam\\res_mods"}
