--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
   },
   "private": true,
   "dependencies": {
-    "electron-log": "^3.0.3",
-    "electron-updater": "^4.0.6",
-    "electron-window-state": "^5.0.3",
+    "electron-log": "3.0.3",
+    "electron-updater": "4.0.6",
+    "electron-window-state": "5.0.3",
     "skeleton-css": "2.0.4"
   },
   "devDependencies": {
@@ -74,7 +74,7 @@
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.0.4",
     "@zxing/ngx-scanner": "1.5.1",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "5.0.1",
     "conventional-changelog-cli": "2.0.21",
     "core-js": "3.1.3",
     "electron": "5.0.2",
@@ -83,7 +83,7 @@
     "fast-xml-parser": "3.12.16",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "^4.0.1",
+    "karma": "4.0.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
@@ -94,12 +94,12 @@
     "primeng": "7.1.3",
     "protractor": "5.4.2",
     "rxjs": "6.5.2",
-    "semver": "^6.0.0",
+    "semver": "6.0.0",
     "ts-node": "8.2.0",
     "tslint": "5.17.0",
-    "typescript": "^3.4.5",
+    "typescript": "3.4.5",
     "wait-on": "3.2.0",
     "webdriver-manager": "12.1.4",
-    "zone.js": "~0.9.1"
+    "zone.js": "0.9.1"
   }
 }
