Fixed errors after electron update and in the path detection routine

--- a/config.json
+++ b/config.json
@@ -1,5 +1,1 @@
-<<<<<<< HEAD
-{"autoUpdate":false,"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"C:\\Users\\bhe\\Desktop\\angulars\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal","overwriteReplaysDirectory":"C:\\Users\\bhe\\Desktop\\angulars\\app\\directory-testing\\non-steam\\res_mods"}
-=======
-{"autoUpdate":true,"signalRToken":"U4NBh1pmxz8XVQsuiMRA","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal"}
->>>>>>> 8c9d6a32bc74d511b1d70c943fc749202f5e41e8
+{"autoUpdate":true,"signalRToken":"dhLx7k5rc4FYovJNSQIM","selectedDirectory":"C:\\Users\\bhe\\Desktop\\angulars\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal","coloredValues":true}
