--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "codelyzer": "5.0.1",
     "conventional-changelog-cli": "2.0.25",
     "core-js": "3.1.3",
-    "electron": "7.0.0",
+    "electron": "^7.0.0",
     "electron-builder": "21.2.0",
     "electron-reload": "1.5.0",
     "fast-xml-parser": "3.14.0",
