Fixed path detection

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"autoUpdate":true,"signalRToken":"dhLx7k5rc4FYovJNSQIM","selectedDirectory":"C:\\Users\\bhe\\Desktop\\angulars\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal","coloredValues":true}
+{"autoUpdate":true,"signalRToken":"tiQv5nMGx1ZfyF3OB0Ap","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal","coloredValues":true}
