Fixed path detection when being overridden

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"autoUpdate":true,"signalRToken":"tiQv5nMGx1ZfyF3OB0Ap","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal","coloredValues":true}
+{"autoUpdate":true,"signalRToken":"tiQv5nMGx1ZfyF3OB0Ap","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\steam-exe_path","playerBackgrounds":true,"fontsize":"normal","coloredValues":true,"overwriteReplaysDirectory":""}
