--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "src/styles/theme.scss",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/lib/marked.js"
+            ]
           },
           "configurations": {
             "dev": {
@@ -83,7 +85,9 @@
               "src/styles/theme.scss",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/lib/marked.js"
+            ]
           },
           "configurations": {
             "dev": {
