--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
+    "ngx-markdown": "^8.2.1",
     "npm-run-all": "4.1.5",
     "path": "^0.12.7",
     "primeicons": "2.0.0",
