--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"autoUpdate":true,"signalRToken":"tiQv5nMGx1ZfyF3OB0Ap","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":true,"fontsize":"normal","coloredValues":true,"overwriteReplaysDirectory":"","seenChangelogs":[3,2,1]}
+{"autoUpdate":true,"signalRToken":"tiQv5nMGx1ZfyF3OB0Ap","selectedDirectory":"D:\\git\\wows-monitor\\app\\directory-testing\\non-steam","playerBackgrounds":"accwr","fontsize":"normal","coloredValues":true,"overwriteReplaysDirectory":"","seenChangelogs":[3,2,1]}
