--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "codelyzer": "5.0.1",
     "conventional-changelog-cli": "2.0.25",
     "core-js": "3.1.3",
-    "electron": "^7.1.3",
+    "electron": "^7.1.6",
     "electron-builder": "21.2.0",
     "electron-reload": "1.5.0",
     "fast-xml-parser": "3.14.0",
@@ -100,6 +100,7 @@
     "ts-node": "8.2.0",
     "tslint": "5.17.0",
     "typescript": "3.4.5",
+    "uuid": "^3.3.3",
     "wait-on": "3.3.0",
     "webdriver-manager": "12.1.4",
     "zone.js": "0.9.1"
