--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "bump": "node tooling/bump-version.js",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "test-server": "http-server test-server",
-    "app-browser": "http-server dist/app-browser"
+    "app-browser": "http-server dist/app-browser",
+    "translate-extract": "ngx-translate-extract --i ./src --output ./src/assets/i18n/en.json -f namespaced-json --sort --null-as-default-value true"
   },
   "private": true,
   "dependencies": {
@@ -90,6 +91,7 @@
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
     "ngx-markdown": "^8.2.1",
+    "ngx-translate-extract": "^1.0.0",
     "npm-run-all": "4.1.5",
     "path": "^0.12.7",
     "primeicons": "2.0.0",
