Filtering and layout for livefeed

--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "@angular/service-worker": "8.2.14",
     "@aspnet/signalr": "1.1.4",
     "@fortawesome/angular-fontawesome": "0.5.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.25",
-    "@fortawesome/free-brands-svg-icons": "5.11.2",
-    "@fortawesome/free-regular-svg-icons": "5.11.2",
-    "@fortawesome/free-solid-svg-icons": "5.11.2",
+    "@fortawesome/fontawesome-svg-core": "1.2.26",
+    "@fortawesome/free-brands-svg-icons": "5.12.0",
+    "@fortawesome/free-regular-svg-icons": "5.12.0",
+    "@fortawesome/free-solid-svg-icons": "5.12.0",
     "@ngx-meta/core": "7.0.0",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
@@ -94,7 +94,7 @@
     "ngx-translate-extract": "^1.0.0",
     "npm-run-all": "4.1.5",
     "path": "^0.12.7",
-    "primeicons": "2.0.0",
+    "primeicons": "^2.0.0",
     "primeng": "8.1.1",
     "protractor": "5.4.2",
     "rxjs": "6.5.2",
