--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "test-server": "http-server test-server",
     "app-browser": "http-server dist/app-browser",
-    "translate-extract": "ngx-translate-extract --i ./src --output ./src/assets/i18n/en.json -f namespaced-json --sort --null-as-default-value true"
+    "translate-extract": "ngx-translate-extract --i ./src --output ./src/assets/i18n/en.json -f namespaced-json --sort --null-as-default-value true",
+    "generate-client": "ng-openapi-gen"
   },
   "private": true,
   "dependencies": {
@@ -93,6 +94,7 @@
     "ngx-markdown": "^8.2.1",
     "ngx-translate-extract": "^1.0.0",
     "npm-run-all": "4.1.5",
+    "ng-openapi-gen": "0.7.2",
     "path": "^0.12.7",
     "primeicons": "^2.0.0",
     "primeng": "8.1.1",
