--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "conventional-changelog-cli": "2.0.25",
     "core-js": "3.1.3",
     "electron": "^8.0.0",
-    "electron-builder": "22.3.2",
+    "electron-builder": "^21.2.0",
     "electron-reload": "1.5.0",
     "fast-xml-parser": "3.14.0",
     "jasmine-core": "3.4.0",
@@ -101,7 +101,7 @@
     "npm-run-all": "4.1.5",
     "path": "^0.12.7",
     "primeicons": "^2.0.0",
-    "primeng": "8.1.1",
+    "primeng": "^9.0.0-rc.4",
     "protractor": "5.4.2",
     "rxjs": "6.5.4",
     "semver": "6.3.0",
