Add build task for linux

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "electron:start": "npm-run-all -p start:desktop:electron electron:serve",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run preelectron && electron . --serve",
     "electron:local": "npm run preelectron && electron . --local",
-    "electron:linux": "npm run preelectron && electron-builder build --linux",
+    "electron:linux": "npm run build:desktop:prod && npm run electron:linux:e",
+    "electron:linux:e": "npm run preelectron && electron-builder build --linux",
     "electron:windows": "npm run build:desktop:prod && npm run electron:windows:e",
     "electron:windows:e": "npm run preelectron && electron-builder publish --windows",
     "electron:mac": "npm run preelectron && electron-builder build --mac --publish",
