--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,3 +1,3 @@
 provider: generic
-url: 'http://localhost:5000/releases'
+url: 'http://wows-monitor.com/releases'
 updaterCacheDirName: angular-electron-updater
