--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
   },
   "private": true,
   "dependencies": {
-    "electron-log": "4.2.2",
-    "electron-updater": "4.3.1",
+    "electron-log": "4.1.1",
+    "electron-updater": "4.2.5",
     "electron-window-state": "5.0.3",
     "skeleton-css": "2.0.4",
     "tslib": "^1.10.0",
-    "universal-analytics": "^0.4.23"
+    "universal-analytics": "^0.4.20"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.1",
@@ -85,10 +85,10 @@
     "codelyzer": "5.0.1",
     "conventional-changelog-cli": "2.0.25",
     "core-js": "3.1.3",
-    "electron": "9.1.0",
-    "electron-builder": "22.7.0",
+    "electron": "^8.2.2",
+    "electron-builder": "^22.4.1",
     "electron-reload": "1.5.0",
-    "fast-xml-parser": "3.17.4",
+    "fast-xml-parser": "3.14.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "4.0.1",
@@ -102,7 +102,7 @@
     "npm-run-all": "4.1.5",
     "path": "^0.12.7",
     "primeicons": "^2.0.0",
-    "primeng": "^9.1.3",
+    "primeng": "^9.0.0-rc.4",
     "protractor": "5.4.2",
     "rxjs": "6.5.4",
     "semver": "6.3.0",
