--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "npm-run-all": "4.1.5",
     "path": "^0.12.7",
     "primeicons": "^2.0.0",
-    "primeng": "^9.0.0-rc.4",
+    "primeng": "^9.0.6",
     "protractor": "5.4.2",
     "rxjs": "6.5.4",
     "semver": "6.3.0",
