--- a/package.json
+++ b/package.json
@@ -73,8 +73,9 @@
     "@fortawesome/free-brands-svg-icons": "5.12.0",
     "@fortawesome/free-regular-svg-icons": "5.12.0",
     "@fortawesome/free-solid-svg-icons": "5.12.0",
-    "@ngx-loading-bar/core": "4.2.0",
-    "@ngx-loading-bar/router": "4.2.0",
+    "@ngx-loading-bar/core": "~5.1.1",
+    "@ngx-loading-bar/http-client": "^5.1.1",
+    "@ngx-loading-bar/router": "~5.1.1",
     "@ngx-meta/core": "8.0.2",
     "@ngx-translate/core": "12.0.0",
     "@ngx-translate/http-loader": "4.0.0",
