--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "electron-window-state": "5.0.3",
     "skeleton-css": "2.0.4",
     "tslib": "^1.10.0",
-    "universal-analytics": "^0.4.20"
+    "universal-analytics": "^0.4.20",
+    "win-version-info": "^3.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.1",
@@ -89,6 +90,7 @@
     "electron": "^8.2.2",
     "electron-builder": "^22.4.1",
     "electron-reload": "1.5.0",
+    "electron-rebuild": "^2.3.4",
     "fast-xml-parser": "3.14.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -113,6 +115,7 @@
     "uuid": "^3.3.3",
     "wait-on": "3.3.0",
     "webdriver-manager": "12.1.4",
+    "win-version-info": "^3.1.1",
     "zone.js": "0.10.2"
   }
 }
