--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "electron-window-state": "5.0.3",
     "skeleton-css": "2.0.4",
     "tslib": "^1.10.0",
-    "universal-analytics": "^0.4.20",
-    "win-version-info": "^3.1.1"
+    "universal-analytics": "^0.4.20"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.1",
