--- a/package.json
+++ b/package.json
@@ -47,26 +47,26 @@
     "electron-updater": "4.2.5",
     "electron-window-state": "5.0.3",
     "skeleton-css": "2.0.4",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "universal-analytics": "^0.4.20"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.1",
-    "@angular-devkit/schematics": "^9.0.1",
-    "@angular/animations": "9.0.0",
+    "@angular-devkit/build-angular": "12.0.4",
+    "@angular-devkit/schematics": "^12.0.4",
+    "@angular/animations": "12.0.4",
     "@angular/cdk": "8.2.3",
-    "@angular/cli": "^9.0.1",
-    "@angular/common": "9.0.0",
-    "@angular/compiler": "9.0.0",
-    "@angular/compiler-cli": "9.0.0",
-    "@angular/core": "9.0.0",
-    "@angular/forms": "9.0.0",
-    "@angular/language-service": "9.0.0",
-    "@angular/platform-browser": "9.0.0",
-    "@angular/platform-browser-dynamic": "9.0.0",
+    "@angular/cli": "^12.0.4",
+    "@angular/common": "12.0.4",
+    "@angular/compiler": "12.0.4",
+    "@angular/compiler-cli": "12.0.4",
+    "@angular/core": "12.0.4",
+    "@angular/forms": "12.0.4",
+    "@angular/language-service": "12.0.4",
+    "@angular/platform-browser": "12.0.4",
+    "@angular/platform-browser-dynamic": "12.0.4",
     "@angular/pwa": "0.900.1",
-    "@angular/router": "9.0.0",
-    "@angular/service-worker": "9.0.0",
+    "@angular/router": "12.0.4",
+    "@angular/service-worker": "12.0.4",
     "@aspnet/signalr": "1.1.4",
     "@fortawesome/angular-fontawesome": "0.5.0",
     "@fortawesome/fontawesome-svg-core": "1.2.26",
@@ -79,25 +79,25 @@
     "@ngx-meta/core": "8.0.2",
     "@ngx-translate/core": "12.0.0",
     "@ngx-translate/http-loader": "4.0.0",
-    "@types/jasmine": "3.3.13",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.6",
     "@types/node": "12.11.7",
     "@zxing/ngx-scanner": "2.0.1",
-    "codelyzer": "5.0.1",
+    "codelyzer": "^6.0.0",
     "conventional-changelog-cli": "2.0.25",
     "core-js": "3.1.3",
     "electron": "^8.2.2",
     "electron-builder": "^22.4.1",
-    "electron-reload": "1.5.0",
     "electron-rebuild": "^2.3.4",
+    "electron-reload": "1.5.0",
     "fast-xml-parser": "3.14.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.0.1",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.2",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "ng-openapi-gen": "0.7.2",
     "ngx-markdown": "^8.2.1",
     "ngx-translate-extract": "^1.0.0",
@@ -105,16 +105,16 @@
     "path": "^0.12.7",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.6",
-    "protractor": "5.4.2",
+    "protractor": "~7.0.0",
     "rxjs": "6.5.4",
     "semver": "6.3.0",
     "ts-node": "8.2.0",
-    "tslint": "5.17.0",
-    "typescript": "3.7.5",
+    "tslint": "~6.1.0",
+    "typescript": "4.2.4",
     "uuid": "^3.3.3",
     "wait-on": "3.3.0",
     "webdriver-manager": "12.1.4",
     "win-version-info": "^3.1.1",
-    "zone.js": "0.10.2"
+    "zone.js": "~0.11.4"
   }
 }
