--- a/package.json
+++ b/package.json
@@ -1,12 +1,5 @@
 {
   "name": "@wows-monitor/app",
-  "description": "WoWs Monitor",
-  "version": "1.0.4",
-  "homepage": "https://wows-monitor.com",
-  "author": {
-    "name": "stewie",
-    "email": "siegerx3-games@yahoo.de"
-  },
   "main": "app/main.js",
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
@@ -15,15 +8,14 @@
     "build": "npm run electron:serve-tsc && ng build --base-href ./",
     "build:dev": "npm run build -- -c dev",
     "build:prod": "npm run build -- -c production",
+    "build:web": "npm run build -- -c web",
     "ng:serve": "ng serve -c dev",
     "ng:serve:web": "ng serve -c dev-web -o",
     "electron:serve-tsc": "tsc -p tsconfig.serve.json",
-    "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
+    "electron:serve": "wait-on tcp:4201 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
-    "electron:build": "npm run build:prod && electron-builder build --publish=never",
-    "electron:windows": "npm run build:desktop:prod && npm run electron:windows:e",
-    "electron:windows:e": "npm run preelectron && electron-builder publish --windows",
-    "electron:mac": "npm run preelectron && electron-builder build --mac --publish",
+    "electron:build": "npm run build:prod && npm run electron:build:e",
+    "electron:build:e": "electron-builder build --windows",
     "bump": "node tooling/bump-version.js",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "translate-extract": "ngx-translate-extract --i ./src --output ./src/assets/i18n/en.json -f namespaced-json --sort --null-as-default-value true",
@@ -55,9 +47,9 @@
     "@stewie/framework": "^1.0.295",
     "@stewie/meta": "^1.0.0",
     "@zxing/ngx-scanner": "~3.1.3",
-    "electron-log": "^4.3.5",
-    "electron-updater": "^4.3.9",
-    "electron-window-state": "^5.0.3",
+    "electron-log": "4.3.5",
+    "electron-updater": "4.3.9",
+    "electron-window-state": "5.0.3",
     "rxjs": "6.5.4",
     "skeleton-css": "^2.0.4",
     "tslib": "^2.3.0",
@@ -78,16 +70,16 @@
     "conventional-changelog-cli": "2.0.25",
     "core-js": "3.1.3",
     "electron": "~13.1.2",
-    "electron-builder": "22.10.5",
+    "electron-builder": "^22.11.7",
     "electron-reload": "1.5.0",
     "fast-xml-parser": "3.14.0",
-    "ngx-markdown": "^8.2.1",
     "ngx-translate-extract": "^1.0.0",
     "npm-run-all": "~4.1.5",
     "path": "^0.12.7",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.0-rc.1",
     "semver": "6.3.0",
+    "showdown": "^1.9.1",
     "ts-node": "8.2.0",
     "tslint": "~6.1.0",
     "typescript": "4.2.4",
