--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@wows-monitor/app",
   "main": "app/main.js",
+  "version": "1.1.0",
   "scripts": {
     "postinstall": "electron-builder install-app-deps",
     "ng": "ng",
@@ -18,8 +19,8 @@
     "electron:build:e": "electron-builder build --windows",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "translate-extract": "ngx-translate-extract --i ./src --parent ./node_modules/@stewie/framework/assets/i18n/en-default.json --ignore ./src/assets/i18n/ignore.json --output ./src/assets/i18n/en.json --uiMessageImport @components/base.component,BaseComponent -f namespaced-json --sort --null-as-default-value true -c",
-    "generate-client": "ng-openapi-gen && generate-forms",
-    "generate-forms": "generate-forms"
+    "generate-client": "ng-openapi-gen && npm run generate-forms",
+    "generate-forms": "node node_modules/@stewie/framework/scripts/generate.mjs"
   },
   "private": true,
   "dependencies": {
@@ -43,7 +44,7 @@
     "@ngx-loading-bar/core": "~5.1.2",
     "@ngx-loading-bar/http-client": "^5.1.2",
     "@ngx-loading-bar/router": "~5.1.2",
-    "@stewie/framework": "^1.0.299",
+    "@stewie/framework": "^1.0.301",
     "@stewie/meta": "^1.0.0",
     "@zxing/ngx-scanner": "~3.1.3",
     "electron-log": "4.3.5",
