--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@microsoft/signalr": "^5.0.7",
     "@ngx-loading-bar/core": "~5.1.2",
     "@ngx-loading-bar/http-client": "^5.1.2",
     "@ngx-loading-bar/router": "~5.1.2",
     "@stewie/framework": "^1.0.305",
     "@stewie/meta": "^1.0.0",
+    "@stewieoo/signalr": "^5.0.7",
     "@zxing/ngx-scanner": "~3.1.3",
     "electron-log": "4.3.5",
     "electron-updater": "4.3.9",
