--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "@stewie/meta": "^1.0.0",
     "@stewieoo/signalr": "^5.0.7",
     "@zxing/ngx-scanner": "~3.1.3",
+    "device-uuid": "^1.0.4",
     "electron-log": "4.3.5",
     "electron-updater": "4.3.9",
     "electron-window-state": "5.0.3",
+    "node-machine-id": "^1.1.12",
     "rxjs": "6.5.4",
     "skeleton-css": "^2.0.4",
     "tslib": "^2.3.0",
