--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 package-lock=true
 registry=https://registry.npmjs.org/
-@wows-monitor:registry=https://pkgs.dev.azure.com/wows-monitor/shared/_packaging/wows-monitor-shared%40Local/npm/registry/
+@stewie:registry=https://pkgs.dev.azure.com/stewieoO/_packaging/stewieoO/npm/registry/
