--- a/angular.json
+++ b/angular.json
@@ -92,7 +92,16 @@
                   "replace": "src/main.ts",
                   "with": "src/main.browser.ts"
                 }
-              ]
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "baseHref": "./"
             },
             "production": {
               "fileReplacements": [
