Add linux build script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:build": "npm run build:prod && npm run electron:build:e",
+    "electron:build:linux": "npm run build:prod && npm run electron:build:linux:e",
     "electron:build:e": "electron-builder build --windows",
+    "electron:build:linux:e": "electron-builder build --linux",
     "version": "conventional-changelog -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md",
     "translate-extract": "ngx-translate-extract --i ./src --parent ./node_modules/@stewie/framework/assets/i18n/en-default.json --ignore ./src/assets/i18n/ignore.json --output ./src/assets/i18n/en.json --uiMessageImport @components/base.component,BaseComponent -f namespaced-json --sort --null-as-default-value true -c",
     "generate-client": "ng-openapi-gen && npm run generate-forms",
