--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@ngx-loading-bar/core": "~5.1.2",
     "@ngx-loading-bar/http-client": "^5.1.2",
     "@ngx-loading-bar/router": "~5.1.2",
-    "@stewie/framework": "^1.0.308",
+    "@stewie/framework": "^1.0.316",
     "@stewie/meta": "^1.0.0",
     "@stewieoo/signalr": "^5.0.7",
     "@zxing/ngx-scanner": "~3.1.3",
@@ -53,6 +53,7 @@
     "electron-log": "4.3.5",
     "electron-updater": "4.3.9",
     "electron-window-state": "5.0.3",
+    "file-saver": "^2.0.5",
     "node-machine-id": "^1.1.12",
     "rxjs": "6.5.4",
     "skeleton-css": "^2.0.4",
