--- a/angular.json
+++ b/angular.json
@@ -62,6 +62,7 @@
           },
           "configurations": {
             "dev": {
+              "baseHref": "./",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -102,7 +103,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "baseHref": "./",
+              "baseHref": "/",
               "serviceWorker": true
             },
             "production": {
